Endrer til immutable list