@@ -54,7 +54,7 @@ public class PeriodiserBeregningsgrunnlag {
 				.filter(periodeÅrsak -> !PeriodeÅrsak.UDEFINERT.equals(periodeÅrsak))
 				.filter(periodeÅrsak -> !(Set.of(PeriodeÅrsak.ENDRING_I_REFUSJONSKRAV, PeriodeÅrsak.ENDRING_I_AKTIVITETER_SØKT_FOR).contains(periodeÅrsak)
 						&& skjæringstidspunkt.equals(periodeFom)))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 
