@@ -59,7 +59,7 @@ public class BeregningsgrunnlagScenarioFastsett {
 		BeregningsgrunnlagPeriode bgPeriode = periodeBuilder.build();
 		return Beregningsgrunnlag.builder()
 				.medGrunnbeløp(BigDecimal.valueOf(GRUNNBELØP_2017))
-				.medAktivitetStatuser(aktivitetStatuser.stream().map(as -> new AktivitetStatusMedHjemmel(as, null)).collect(Collectors.toList()))
+				.medAktivitetStatuser(aktivitetStatuser.stream().map(as -> new AktivitetStatusMedHjemmel(as, null)).toList())
 				.medBeregningsgrunnlagPeriode(bgPeriode)
 				.build();
 	}
